--- a/awards.html
+++ b/awards.html
@@ -188,6 +188,26 @@
 					<div class="section color-1" >
 						<div class="section-container">
 								<ul class="timeline">
+
+									<li class="open">
+										<div class="date">SBCARS 2021</div>
+										<div class="circle"></div>
+										<div class="data">
+											<div class="subject">Second Best Paper of the SBCARS 2021 Programme</div>
+											<div class="text row">
+												<div class="col-md-2">
+													<img alt="image" class="thumbnail img-responsive"
+														 src="img/personal/cbsoft_2021.png">
+												</div>
+
+												<div class="col-md-10" style="text-align:justify">Award received in Joinville, Brazil during the 15th Brazilian Symposium on Software Components, Architectures, and Reuse.
+													The paper "Do Critical Components Smell Bad? An Empirical Study with Component-based Software Product Lines" was selected as the second best paper of SBCARS 2021.
+												</div>
+											</div>
+										</div>
+
+									</li>
+
 										<li class="open">
 											<div class="date">Student Volunteer'20</div>
 											<div class="circle"></div>
