--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 </script>
 
 
-<title>Anderson Uchôa - UFRJ and PUC-Rio</title>
+<title>Anderson Uchôa - UFC</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="author" content="Anderson Uchôa">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<meta name="description" content="Anderson Uchôa Academic Page" />
+<meta name="description" content="Anderson Uchôa Faculty Page" />
 <meta name="keywords"
-	content="faculty profile, anderson uchoa, anderson uchôa, ufrj, puc-rio, puc, pontifical catholic university, pontifical catholic university of rio de janeiro, software engineering, empirical software engineering, applied software engineering" />
+	content="faculty profile, anderson uchoa, anderson uchôa, ufrj, ufc, puc-rio, puc, pontifical catholic university, pontifical catholic university of rio de janeiro, software engineering, empirical software engineering, applied software engineering" />
 
 <link rel="shortcut icon" href="../favicon.ico">
 
@@ -73,12 +73,10 @@
 			<div id="main-nav">
 				<div id="nav-container">
 					<div id="profile" class="clearfix">
-						<a href="http://www.inf.puc-rio.br/" target="_new"><img
-							alt="image" width="230" src="img/logo_di.png"></a>
+						<a href="http://www.ufc.br/" target="_new"><img
+							alt="image" width="220em" src="img/logo_ufc_horizontal.png"></a>
 						<br>
 
-						<a href="https://dcc.ufrj.br/" target="_new"><img
-								alt="image" width="230" src="img/logo_dcc_ufrj.png"></a>
 						<br>
 						<div class="portrate"></div>
 						<div class="title">
@@ -160,14 +158,16 @@
 									<h3 class="title">Short Bio & Position</h3>
 									<p style="text-align:justify">
 
-										Anderson Uchôa is a Substitute Professor of the <a href="https://dcc.ufrj.br/" target="_new">Department of Computer Science</a> at Federal University of Rio de Janeiro <a href="https://ufrj.br/en/" target="_new">(UFRJ)</a>. Anderson is also a third-year PhD student in Software Engineering of the <a
+										I am a Software Engineering Scientist who is active as a Professor at the Federal University of Ceará (UFC).
+										I am also a co-head of the <a href="https://leanresearchlab.github.io/quixada/index.html" target="_new">LEAN Lab</a>, which focuses on software quality and experimental software engineering.
+										Before becoming a professor at UFC, I was a Substitute Professor of the <a href="https://dcc.ufrj.br/" target="_new">Department of Computer Science</a> at Federal University of Rio de Janeiro <a href="https://ufrj.br/en/" target="_new">(UFRJ)</a>. I obtained my PhD in Software Engineering at the <a
 											href="http://www.inf.puc-rio.br" target="_new">Department
-											of Informatics</a> at Pontifical Catholic University of Rio de
+										of Informatics</a> at Pontifical Catholic University of Rio de
 										Janeiro <a href="https://www.puc-rio.br" target="_new">
-											(PUC-Rio)</a> under the supervision
+										(PUC-Rio)</a> under the supervision
 										of Prof. <a href="https://www-di.inf.puc-rio.br/~afgarcia//"
-													target="_new">Dr. Alessandro Garcia</a>. He holds a Master's in Software Engineering from PUC-Rio (2019).
-										Anderson holds a Bachelor's degree in Software Engineering
+													target="_new">Dr. Alessandro Garcia</a>. I also holds a Master's in Software Engineering from PUC-Rio (2019).
+										Finally,  I holds a Bachelor's degree in Software Engineering
 										from the Federal University of Ceará <a
 											href="http://www.ufc.br/" target="_new">(UFC)</a>, Brazil, in
 										cooperation with Sapienza University of Rome <a
@@ -177,9 +177,9 @@
 
 
 									<p style="text-align:justify">
-										He has worked for research projects in software
+										Anderson Uchôa has worked for research projects in software
 										engineering, information systems for healthcare, and data
-										science. He also works in industrial projects at PUC-Rio.
+										science. He also worked in industrial projects at PUC-Rio.
 										Relevant venues and journals have accepted his work for
 										publication, such as the International Conference on Software Maintenance and Evolution (ICSME), International Conference on Software Engineering (ICSE), and International Conference on Mining Software Repositories (MSR). Anderson collaborates
 										with various researchers in Brazil (more recently, UFAL, UFPE, UFPR,
@@ -191,26 +191,16 @@
 										available in <a href="publication.html">publications</a>.
 									</p>
 
-<!--									<p>-->
-
-<!--										He is a research scholar in software engineering for <a-->
-<!--											href="https://opus.les.inf.puc-rio.br/wordpress/">OPUS-->
-<!--											Research Group </a> at PUC-Rio since 2017 under the supervision-->
-<!--										of Prof. <a href="https://www-di.inf.puc-rio.br/~afgarcia//"-->
-<!--											target="_new">Dr. Alessandro Garcia</a> which is part of the-->
-<!--										Software Engineering Laboratory of PUC-Rio. His main research-->
-<!--										interests are code review, software reuse, software evolution,-->
-<!--										software maintenance, and human factors. His researches are-->
-<!--										available in <a href="publication.html">publications</a>.-->
-<!--									</p>-->
 
 
 									<p>Feel free to contact me. Specially if you are a
 										researcher searching for collaboration.</p>
 
-									<a href="https://www.inf.puc-rio.br/" target="_new">Departamento
-										de Informática - PUC-Rio</a><br> Rua Marquês de São Vicente
-									225, 22451-900, Gavea, Rio de Janeiro, RJ, Brazil<br> <strong><i
+									<a href="https://itapaje.ufc.br/pt/" target="_new">
+										Campus de Itapajé – Jardins de Anita - UFC</a>
+									<br>
+									Rua Francisco José de Oliveira, s/n, 62600-000, Centro, Itapajé, CE, Brazil <br>
+									<strong><i
 										class="icon-envelope"></i>&nbsp;&nbsp;</strong>auchoa [at]
 									inf.puc-rio.br<br>
 
@@ -234,23 +224,23 @@
 									<ul class="ul-dates">
 										<li>
 											<div class="dates">
-												<span>Present</span> <span>2022</span>
+												<span>Present</span> <span>2021</span>
 											</div>
 											<div class="content">
-												<img alt="image" src="img/logo_puc_rio.gif" width="45em" height="auto" align="right" class="img-responsive">
+												<img alt="image" src="img/logo_ufc.png" width="45em" height="auto" align="right" class="img-responsive">
 
-												<h4>PhD Student in Software Engineering</h4>
+												<h4>Professor in Software Engineering</h4>
 												<p>
-													<em>Pontifical Catholic University of Rio de Janeiro
-														(PUC-Rio)</em>, Informatics Department
+													<em>Federal University of Ceará (UFC)</em>, Campus de Itapajé - Jardins de Anita
 												</p>
 											</div>
 										</li>
 									</ul>
+									</br>
 									<ul class="ul-dates">
 										<li>
 											<div class="dates">
-												<span>Present</span> <span>2022</span>
+												<span>2021</span> <span>2021</span>
 											</div>
 											<div class="content">
 												<img alt="image" src="img/logo_ufrj.png" width="70em" height="auto" align="right" class="img-responsive">
@@ -272,12 +262,12 @@
 
 										<li>
 											<div class="dy">
-												<span class="degree">PhD</span> <span class="year">Present</span>
+												<span class="degree">PhD</span> <span class="year">2021</span>
 											</div>
 											<div class="description">
 												<img alt="image" src="img/logo_puc_rio.gif" width="45em" height="auto" align="right" class="img-responsive">
 												<p class="what">PhD in Software Engineering, PUC-Rio</p>
-												<p class="where">Grade Point Average (GPA): 9.7/10.</p>
+												<p class="where">Grade Point Average (GPA): 9.8/10.</p>
 												<p class="where">
 													Advisor: <a href="http://www-di.inf.puc-rio.br/~afgarcia//"
 														target="_new">Alessandro Garcia</a>
