--- a/publication.html
+++ b/publication.html
@@ -69,16 +69,15 @@
 
 <div id="wrapper">
     <a href="#sidebar" class="mobilemenu"><i class="icon-reorder"></i></a>
+
     <div id="sidebar">
         <div id="main-nav">
             <div id="nav-container">
                 <div id="profile" class="clearfix">
-                    <a href="http://www.inf.puc-rio.br/" target="_new"><img
-                            alt="image" width="230" src="img/logo_di.png"></a>
+                    <a href="http://www.ufc.br/" target="_new"><img
+                            alt="image" width="220em" src="img/ufc_logo_v2.png"></a>
                     <br>
 
-                    <a href="https://dcc.ufrj.br/" target="_new"><img
-                            alt="image" width="230" src="img/logo_dcc_ufrj.png"></a>
                     <br>
                     <div class="portrate"></div>
                     <div class="title">
@@ -98,10 +97,12 @@
                         <div class="text">Publications</div>
                     </a></li>
 
+
                     <li><a href="awards.html">
                         <div class="icon icon-star"></div>
                         <div class="text">Awards</div>
                     </a></li>
+
 
                     <li><a href="research.html">
                         <div class="icon icon-book"></div>
