--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div id="nav-container">
 					<div id="profile" class="clearfix">
 						<a href="http://www.ufc.br/" target="_new"><img
-							alt="image" width="220em" src="img/logo_ufc_horizontal.png"></a>
+							alt="image" width="220em" src="img/ufc_logo_v2.png"></a>
 						<br>
 
 						<br>
