--- a/research.html
+++ b/research.html
@@ -16,15 +16,15 @@
 	</script>
 
 
-	<title>Anderson Uchôa - UFRJ and PUC-Rio</title>
+	<title>Anderson Uchôa - UFC</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="author" content="Anderson Uchôa">
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<meta name="description" content="Anderson Uchôa Academic Page" />
+	<meta name="description" content="Anderson Uchôa Faculty Page" />
 	<meta name="keywords"
-		  content="faculty profile, anderson uchoa, anderson uchôa, ufrj, puc-rio, puc, pontifical catholic university, pontifical catholic university of rio de janeiro, software engineering, empirical software engineering, applied software engineering" />
+		  content="faculty profile, anderson uchoa, anderson uchôa, ufrj, ufc, puc-rio, puc, pontifical catholic university, pontifical catholic university of rio de janeiro, software engineering, empirical software engineering, applied software engineering" />
 
 	<link rel="shortcut icon" href="../favicon.ico">
 
