--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
 									<br>
 									Rua Francisco José de Oliveira, s/n, 62600-000, Centro, Itapajé, CE, Brazil <br>
 									<strong><i
-										class="icon-envelope"></i>&nbsp;&nbsp;</strong>auchoa [at]
-									inf.puc-rio.br<br>
+										class="icon-envelope"></i>&nbsp;&nbsp;</strong>andersonuchoa [at]
+									ufc.br<br>
 
 									<p>Spoken Languages: English (intermediary); Italian
 										(fluent); Portuguese (mother language).</p>
