--- a/teaching.html
+++ b/teaching.html
@@ -177,8 +177,6 @@
 					</div>
 
 
-
-
 					<div class="pagecontents">
 						<div class="section color-1">
 							<div class="section-container">
@@ -187,15 +185,16 @@
 										<h3>Currrent Teaching</h3>
 									</div>
 
+
 									<ul class="ul-boxed list-unstyled">
 										<li>
 											<div class="content">
 												<div class="text row">
 													<div class="col-md-10">
-														Below are the courses that I teach at the <a href="https://www.dcc.ufrj.br/" target="_blank" title="Institute of Computing">Institute of Computing</a> of the <a href="https://ufrj.br/en/" target="_blank" title="Federal University of Rio de Janeiro">Federal University of Rio de Janeiro</a>
+														Below are the courses that I teach at the <a href="http://itapaje.ufc.br/" target="_blank" title="Federal University of Ceará - Itapajé">Campus of Itapajé</a> of the <a href="https://www.ufc.br/" target="_blank" title="Federal University of Ceará">Federal University of Ceará</a>
 													</div>
 													<div class="col-md-2">
-														<img alt="image" src="img/logo_dcc_ufrj.png" width="130em" height="auto" align="right" class="img-responsive">
+														<img alt="image" src="img/logo_ufc_horizontal.png" width="130em" height="auto" align="right" class="img-responsive">
 													</div>
 												</div>
 											</div>
@@ -203,149 +202,23 @@
 									</ul>
 
 									<div class="row">
-										<div class="col-md-12">
-											<ul class="ul-boxed list-unstyled">
-												<li>Undergraduate level (in Portughese)</li>
-											</ul>
-										</div>
-									</div>
-
-									<div class="row">
 										<div class="col-md-6">
 											<ul class="ul-dates">
 												<li>
 													<div class="dates">
 														<span>Present</span>
-														<span>2021.2</span>
+														<span>2022.1</span>
 													</div>
 													<div class="content">
-														<div class="text row">
-															<div class="col-md-12">
-																MAB240: Computação II
-																<p><span class="label label-danger">Professor</span>&nbsp;&nbsp;<em>For more information see the course web page <a href="" title="">here</a>.</em></p>
-															</div>
-														</div>
+														<h4>IT0062/01A - Software Engineering I (B.Sc. level)</h4>
+														<h4>IT0010/01A - Object Oriented Programming (B.Sc. level)</h4>
+														<h4>IT0064/02A - Object Oriented Programming (B.Sc. level)</h4>
 													</div>
 												</li>
 
-												<li>
-													<div class="dates">
-														<span>Present</span>
-														<span>2021.2</span>
-													</div>
-													<div class="content">
-														<div class="text row">
-															<div class="col-md-12">
-																CMT012: Introdução à programação C/C++
-																<p><span class="label label-danger">Professor</span>&nbsp;&nbsp;<em>For more information see the course web page <a href="" title="">here</a>.</em></p>
-															</div>
-														</div>
-													</div>
-												</li>
-
-<!--												<li>-->
-<!--													<div class="dates">-->
-<!--														<span>Fall</span>-->
-<!--														<span>2020</span>-->
-<!--													</div>-->
-<!--													<div class="content">-->
-<!--														<div class="text row">-->
-<!--															<div class="col-md-12">-->
-<!--																DMC737: Integrated Multimedia Creation-->
-<!--																<p><span class="label label-danger">Instructor</span>&nbsp;&nbsp;<em>For more information see the course web page <a href="https://kastoria.teiwm.gr/edetclass/courses/DMC154/" title="Integrated Multimedia Creation">here</a>.</em></p>-->
-<!--															</div>-->
-<!--														</div>-->
-<!--													</div>-->
-<!--												</li>-->
 											</ul>
 										</div>
 
-<!--										<div class="col-md-6 ">-->
-<!--											<ul class="ul-dates">-->
-<!--												<li>-->
-<!--													<div class="dates">-->
-<!--														<span>Spring</span>-->
-<!--														<span>2021</span>-->
-<!--													</div>-->
-<!--													<div class="content">-->
-<!--														<div class="text row">-->
-<!--															<div class="col-md-12">-->
-<!--																DCM4145: Creative Studio and Audiovisual Productions-->
-<!--																<p><span class="label label-danger">Professor</span>&nbsp;&nbsp;<em>For more information see the course web page <a href="https://eclass.uowm.gr/courses/CDM137/" title="Creative Studio and Audiovisual Productions">here</a>.</em></p>-->
-<!--															</div>-->
-<!--														</div>-->
-<!--													</div>-->
-<!--												</li>-->
-
-<!--												<li>-->
-<!--													<div class="dates">-->
-<!--														<span>Spring</span>-->
-<!--														<span>2021</span>-->
-<!--													</div>-->
-<!--													<div class="content">-->
-<!--														<div class="text row">-->
-<!--															<div class="col-md-12">-->
-<!--																CDM4255: Mobile Digital Media and Diffuse Computation-->
-<!--																<p><span class="label label-danger">Professor</span>&nbsp;&nbsp;<em>For more information see the course web page <a href="https://eclass.uowm.gr/courses/CDM138/" title="Mobile Digital Media and Distributed Computation">here</a>.</em></p>-->
-<!--															</div>-->
-<!--														</div>-->
-<!--													</div>-->
-<!--												</li>-->
-
-<!--												<li>-->
-<!--													<div class="dates">-->
-<!--														<span>Spring</span>-->
-<!--														<span>2021</span>-->
-<!--													</div>-->
-<!--													<div class="content">-->
-<!--														<div class="text row">-->
-<!--															<div class="col-md-12">-->
-<!--																DMC638: Interactive Communication-->
-<!--																<p><span class="label label-danger">Professor</span>&nbsp;&nbsp;<em>For more information see the course web page <a href="https://kastoria.teiwm.gr/edetclass/courses/DMC197/" title="Interactive Communication">here</a>.</em></p>-->
-<!--															</div>-->
-<!--														</div>-->
-<!--													</div>-->
-<!--												</li>-->
-<!--											</ul>-->
-
-<!--										</div>-->
-									</div>
-
-<!--									<div class="row">-->
-<!--										<div class="col-md-12">-->
-<!--											<ul class="ul-boxed list-unstyled">-->
-<!--												<li>Graduate</li>-->
-<!--												<li>-->
-<!--													<div class="content">-->
-<!--														<div class="text row">-->
-<!--															<div class="col-md-11">-->
-<!--																Interdisciplinary Postgraduate Program in Education Sciences: <a href="https://teachedumsc.uowm.gr/" target="_blank">Teacher Training in Innovative Approaches to Teaching and Learning</a>-->
-<!--															</div>-->
-<!--															<div class="col-md-1">-->
-<!--																<img alt="image" src="images/UoWM-logo/TEACHEDUMSC-logo.png" width="50em" height="auto" align="right" class="img-responsive">-->
-<!--															</div>-->
-<!--														</div>-->
-<!--													</div>-->
-<!--												</li>-->
-<!--											</ul>-->
-<!--										</div>-->
-<!--									</div>-->
-<!--									<ul class="ul-dates">-->
-<!--										<li>-->
-<!--											<div class="dates">-->
-<!--												<span>Fall</span>-->
-<!--												<span>2020</span>-->
-<!--											</div>-->
-<!--											<div class="content">-->
-<!--												<div class="text row">-->
-<!--													<div class="col-md-12">-->
-<!--														Didactic Utilization of ICT in Education-->
-<!--														<p><span class="label label-danger">Instructor - Co-teaching</span>&nbsp;&nbsp;<em>For more information see the course web page <a href="https://eclass.uowm.gr/courses/TTIATL104/" title="Didactic Utilization of ICT in Education">here</a>.</em></p>-->
-<!--													</div>-->
-<!--												</div>-->
-<!--											</div>-->
-<!--										</li>-->
-<!--									</ul>-->
 								</div>
 							</div>
 						</div>
@@ -359,13 +232,83 @@
 										<h3>Teaching History</h3>
 									</div>
 
+									<ul class="ul-boxed list-unstyled">
+										<li>
+											<div class="content">
+												<div class="text row">
+													<div class="col-md-10">
+														Below are the courses that I taught at the <a href="http://itapaje.ufc.br/" target="_blank" title="Federal University of Ceará - Itapajé">Campus of Itapajé</a> of the <a href="https://www.ufc.br/" target="_blank" title="Federal University of Ceará">Federal University of Ceará</a>
+													</div>
+													<div class="col-md-2">
+														<img alt="image" src="img/logo_ufc_horizontal.png" width="130em" height="auto" align="right" class="img-responsive">
+													</div>
+												</div>
+											</div>
+										</li>
+									</ul>
+
+									<div class="row">
+										<div class="col-md-6">
+											<ul class="ul-dates-gray">
+												<li>
+													<div class="dates">
+														<span>UFC</span>
+														<span>2021.2</span>
+													</div>
+													<div class="content">
+														<h4>IT0004/01A - Programming Fundamentals (B.Sc. level)</h4>
+														<h4>IT0055/01A - Programming Fundamentals (B.Sc. level)</h4>
+														<h4>IT0055/02A - Programming Fundamentals (B.Sc. level)</h4>
+														<h4>IT0061/01A - Introduction to Computing (B.Sc. level)</h4>
+													</div>
+												</li>
+											</ul>
+										</div>
+
+									</div>
+
 
 									<ul class="ul-boxed list-unstyled">
 										<li>
 											<div class="content">
 												<div class="text row">
 													<div class="col-md-10">
-														Below are the courses that I teach at the <a href="http://www.inf.puc-rio.br/" target="_blank" title="Department of Informatics">Department of Informatics</a> of the <a href="https://www.puc-rio.br/index.html" target="_blank" title="Pontifical Catholic University of Rio de Janeiro">Pontifical Catholic University of Rio de Janeiro</a>
+														Below are the courses that I taught at the <a href="https://www.dcc.ufrj.br/" target="_blank" title="Institute of Computing">Institute of Computing</a> of the <a href="https://ufrj.br/en/" target="_blank" title="Federal University of Rio de Janeiro">Federal University of Rio de Janeiro</a>
+													</div>
+													<div class="col-md-2">
+														<img alt="image" src="img/logo_dcc_ufrj.png" width="130em" height="auto" align="right" class="img-responsive">
+													</div>
+												</div>
+											</div>
+										</li>
+									</ul>
+
+
+									<div class="row">
+										<div class="col-md-8">
+											<ul class="ul-dates-gray">
+												<li>
+													<div class="dates">
+														<span>UFRJ</span>
+														<span>2021.2</span>
+													</div>
+													<div class="content">
+														<h4>MAB240 - Computing II (B.Sc. level)</h4>
+														<h4>CMT012 - Introduction to C/C++ Programming (B.Sc. level)</h4>
+													</div>
+												</li>
+											</ul>
+										</div>
+
+									</div>
+
+
+									<ul class="ul-boxed list-unstyled">
+										<li>
+											<div class="content">
+												<div class="text row">
+													<div class="col-md-10">
+														Below are the courses that I taught at the <a href="http://www.inf.puc-rio.br/" target="_blank" title="Department of Informatics">Department of Informatics</a> of the <a href="https://www.puc-rio.br/index.html" target="_blank" title="Pontifical Catholic University of Rio de Janeiro">Pontifical Catholic University of Rio de Janeiro</a>
 													</div>
 													<div class="col-md-2">
 														<img alt="image" src="img/logo_di.png" width="130em" height="auto" align="right" class="img-responsive">
@@ -378,64 +321,16 @@
 									<ul class="ul-dates-gray">
 										<li>
 											<div class="dates">
-												<span>2021.1</span>
+												<span>PUC-Rio</span>
 												<span>2021.1</span>
 											</div>
 											<div class="content">
-												<h4>INF1028: Projeto e Construção de Sistemas</h4>
-												<p><span class="label label-danger">Co-Professor</span></p>
+												<h4>INF1028 - Systems Design and Construction (B.Sc. level)</h4>
 											</div>
 										</li>
-<!--										<li>-->
-<!--											<div class="dates">-->
-<!--												<span>2020</span>-->
-<!--												<span>2019</span>-->
-<!--											</div>-->
-<!--											<div class="content">-->
-<!--												<h4>Public Relations and Marketing on the Internet</h4>-->
-<!--												<p><span class="label label-danger">Instructor - Co-teaching</span></p>-->
-<!--											</div>-->
-<!--										</li>-->
+
 									</ul>
 
-									<br>
-<!--									<ul class="ul-boxed list-unstyled">-->
-<!--										<li>-->
-<!--											<div class="content">-->
-<!--												<div class="text row">-->
-<!--													<div class="col-md-11">-->
-<!--														Below are the courses that I have taught for the Academic year 2018-2019 at the <a href="http://www.cse.uoi.gr/en/" target="_blank" title="Department of Computer Science &amp; Engineering">Department of Computer Science &amp; Engineering</a> of the <a href="http://www.uoi.gr/en/" target="_blank" title="University of Ioannina">University of Ioannina</a>-->
-<!--													</div>-->
-<!--													<div class="col-md-1">-->
-<!--														<img alt="image" src="images/cs-logo/CSE-UOI-LOGO-EN.png" width="50em" height="auto" align="right" class="img-responsive">-->
-<!--													</div>-->
-<!--												</div>-->
-<!--											</div>-->
-<!--										</li>-->
-<!--									</ul>-->
-
-<!--									<ul class="ul-dates-gray">-->
-<!--										<li>-->
-<!--											<div class="dates">-->
-<!--												<span>2019</span>-->
-<!--												<span>2018</span>-->
-<!--											</div>-->
-<!--											<div class="content">-->
-<!--												<h4>INF1028: Projeto e Construção de Sistemas</h4>-->
-<!--												<p><span class="label label-danger">Co-Professor</span></p>-->
-<!--											</div>-->
-<!--										</li>-->
-<!--										<li>-->
-<!--											<div class="dates">-->
-<!--												<span>2019</span>-->
-<!--												<span>2018</span>-->
-<!--											</div>-->
-<!--											<div class="content">-->
-<!--												<h4>Digital Image Processing</h4>-->
-<!--												<p><span class="label label-danger">Instructor</span></p>-->
-<!--											</div>-->
-<!--										</li>-->
-									</ul>
 								</div>
 							</div>
 						</div>
