--- a/awards.html
+++ b/awards.html
@@ -189,6 +189,26 @@
 								<ul class="timeline">
 
 									<li class="open">
+										<div class="date">SBCARS 2022</div>
+										<div class="circle"></div>
+										<div class="data">
+											<div class="subject"> Best Paper Award of the SBCARS 2022 Programme</div>
+											<div class="text row">
+												<div class="col-md-2">
+													<img alt="image" class="thumbnail img-responsive"
+														 src="img/personal/cbsoft_2022.png">
+												</div>
+
+												<div class="col-md-10" style="text-align:justify">Award received in Uberlândia, Brazil during the 16th Brazilian Symposium on Software Components, Architectures, and Reuse.
+													The paper "How do trivial refactorings affect classification prediction models?" was selected as the best paper of SBCARS 2022.
+												</div>
+											</div>
+										</div>
+
+									</li>
+
+
+									<li class="open">
 										<div class="date">SBCARS 2021</div>
 										<div class="circle"></div>
 										<div class="data">
