--- a/services.html
+++ b/services.html
@@ -174,6 +174,7 @@
 								</div>
 								<p>I have served (or will serve) as reviewer of the following conferences:</p>
 								<ul>
+									<li>20th International Conference on Mining Software Repositories (MSR) 2023 <b>(Data and Tool Showcase Committee Member)</b> </li>
 									<li>15th ACM SIGPLAN International Conference on Software Language Engineering (SLE) 2022 <b>(Artifact Evaluation Committee Member)</b> </li>
 									<li>17th European Conference on Computer Systems (EuroSys) 2022 <b>(Artifact Evaluation Committee Member)</b> </li>
 									<li>18th IEEE/ACM International Conference on Mining Software Repositories (MSR) 2022 <b>(Shadow PC Member)</b> </li>
