updating services to SE community

--- a/services.html
+++ b/services.html
@@ -168,16 +168,34 @@
 					<div class="pagecontents">
 						<div class="section color-1">
 							<div class="section-container">
-								<div class="title text-center">
 
+								<div class="title text-center">
+									<h3>Events Organisation</h3>
+								</div>
+								<p>I have served (or will serve) as TPC chair of the following events:</p>
+								<ul>
+									<li>12th Workshop on Software Visualization, Evolution and Maintenance (VEM), Co-located with CBSoft 2024 </li>
+								</ul>
+
+
+								<div class="title text-center">
 									<h3>Conferences</h3>
 								</div>
 								<p>I have served (or will serve) as reviewer of the following conferences:</p>
 								<ul>
+									<li>19th International Conference on Cooperative and Human Aspects of Software Engineering (CHASE) 2025 <b>(PC Member)</b> </li>
+									<li>9th Workshop on Social, Human and Economic Aspects of Software (WHASES) 2024 <b>(PC Member)</b> </li>
+									<li>18th Brazilian Symposium on Software Components, Architectures, and Reuse (SBCARS) 2024 <b>(PC Member)</b> </li>
+									<li>46th International Conference on Software Engineering (ICSE) 2024 <b>(Artifact Evaluation Committee Member)</b> </li>
+									<li>XII Escola Regional de Computação do Ceará, Maranhão e Piauí (ERCEMAPI) 2024 <b>(PC Member)</b> </li>
+									<li> 11th Workshop on Software Visualization, Evolution and Maintenance (VEM) 2023 <b>(PC Member)</b> </li>
+									<li>XI Escola Regional de Computação do Ceará, Maranhão e Piauí (ERCEMAPI) 2023 <b>(PC Member)</b> </li>
+									<li> 37th Brazilian Symposium on Software Engineering (SBES) 2023 <b>(Insightful Ideas and Emerging Results Committee Member)</b> </li>
 									<li>20th International Conference on Mining Software Repositories (MSR) 2023 <b>(Data and Tool Showcase Committee Member)</b> </li>
 									<li>15th ACM SIGPLAN International Conference on Software Language Engineering (SLE) 2022 <b>(Artifact Evaluation Committee Member)</b> </li>
 									<li>17th European Conference on Computer Systems (EuroSys) 2022 <b>(Artifact Evaluation Committee Member)</b> </li>
 									<li>18th IEEE/ACM International Conference on Mining Software Repositories (MSR) 2022 <b>(Shadow PC Member)</b> </li>
+									<li>X Escola Regional de Computação do Ceará, Maranhão e Piauí (ERCEMAPI) 2022 <b>(PC Member)</b> </li>
 									<li>27th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE) 2020 <b>(co-reviewer)</b></li>
 									<li>42nd International Conference on Software Engineering (ICSE) 2020 <b>(co-reviewer)</b></li>
 									<li>13th International Symposium on Empirical Software Engineering and Measurement (ESEM) 2019 <b>(co-reviewer)</b></li>
@@ -187,10 +205,12 @@
 								<div class="title text-center">
 									<h3>Journals</h3>
 								</div>
-								<p>I have served (or will serve) as reviewer of the following journals:</p>
+								<p>I serve as a reviewer of the following journals:</p>
 								<ul>
-									<li>Empirical Software Engineering (EMSE) 2019 <b>(co-reviewer)</b></li>
-									<li>Journal of Systems and Software (JSS) 2018 <b>(co-reviewer)</b></li>
+									<li>Software Quality Journal(SQJ) </li>
+									<li>Journal of Software Engineering Research and Development (JSERD) </li>
+									<li>Empirical Software Engineering (EMSE)</li>
+									<li>Journal of Systems and Software (JSS)</li>
 								</ul>
 
 
